--- a/css/style.css
+++ b/css/style.css
@@ -99,15 +99,15 @@ input {
 
 #icone2 {
     left: 55.5%;
-    top: 180px;
+    top: 38%;
 }
 
 #icone3 {
-    left: 650px;
-    top: 200px;
+    left: 69.5%;
+    top: 42%;
 }
 
 #icone4 {
-    left: 41px;
-    top: 120px;
+    left: 5.5%;
+    top: 32%;
 }
