--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,16 @@ input {
 
 .cadre {
     position: relative;
-    z-index: 1;
+    z-index: 3;
 }
 
 #perso {
     position: relative;
+    background-image: url("../image/chevalier.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 70px;
+    height: 70px;
     z-index: 2;
 }
 
