--- a/css/style.css
+++ b/css/style.css
@@ -166,9 +166,34 @@ input {
     cursor: pointer;
 }
 
-#cadre0 {
+.cadre {
     border: solid;
-    left: 10%;
-    width: 10%;
+    position: absolute;
+    width: 5%;
     height: 10%;
+}
+
+#cadre0 {
+    left: 52.3%;
+    top: 33%;
+}
+
+#cadre1 {
+    left: 30%;
+    top: 45%;
+}
+
+#cadre2 {
+    left: 51.5%;
+    top: 65%;
+}
+
+#cadre3 {
+    left: 60%;
+    top: 75%;
+}
+
+#cadre4 {
+    left: 21.5%;
+    top: 73%;
 }
