--- a/css/style.css
+++ b/css/style.css
@@ -83,10 +83,6 @@ input {
     z-index: 1;
 }
 
-.cadre {
-    position: relative;
-    z-index: 3;
-}
 
 #perso {
     position: absolute;
@@ -196,4 +192,22 @@ input {
 #cadre4 {
     left: 21.5%;
     top: 73%;
+}
+
+.title {
+
+}
+
+.glo_quetes {
+    background-color: darkgreen;
+    color : white;
+}
+
+#super_glo {
+    display: flex;
+    flex-wrap: wrap;
+    border: solid ;
+    width: 100%;
+    height: 710px;
+
 }
