--- a/css/style.css
+++ b/css/style.css
@@ -43,25 +43,19 @@ input {
     margin-top: 20%;
 }
 
-#map {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    }
-
 #welcome {
     margin-top: 50px;
     padding-bottom: 50px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #corps {
     background-image: url("../image/test_map.png");
-    height: 704px;
-    width: 1024px;
+    width: 80%;
+    height: 100%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 .icone {
@@ -194,10 +188,6 @@ input {
     top: 73%;
 }
 
-.title {
-
-}
-
 .glo_quetes {
     background-color: darkgreen;
     color : white;
@@ -208,6 +198,10 @@ input {
     flex-wrap: wrap;
     border: solid ;
     width: 100%;
-    height: 710px;
 
+}
+
+#resume {
+    width: 20%;
+    background: grey;
 }
