affichage correct des quetes dans mairie

--- a/css/style.css
+++ b/css/style.css
@@ -127,4 +127,13 @@ input {
 .resume {
     width: 20%;
     background: grey;
+    color: ghostwhite;
+}
+
+h2 {
+    text-align: center;
+}
+
+li {
+    font-size: 18px;
 }
