--- a/css/css2.css
+++ b/css/css2.css
@@ -498,7 +498,7 @@
 
 }
 
-#checkM2 {
+#check0 {
     top: 42%;
     left: 52%;
 
@@ -535,7 +535,7 @@
 
 }
 
-#checkME7 {
+#check2 {
     top: 93.3%;
     left: 61.4%;
 
@@ -571,33 +571,9 @@
 
 }
 
-#checkL7 {
+#check1 {
     top: 82%;
     left: 51.2%;
-
-}
-
-#checkMDE2 {
-    top: 47.6%;
-    left: 37.9%;
-
-}
-
-#checkMDE3 {
-    top: 71%;
-    left: 37.9%;
-
-}
-
-#checkMDE4 {
-    top: 71%;
-    left: 46.7%;
-
-}
-
-#checkMDE5 {
-    top: 88.6%;
-    left: 46.7%;
 
 }
 
@@ -619,21 +595,9 @@
 
 }
 
-#checkMDE9 {
+#check4 {
     top: 90.7%;
     left: 14.5%;
-
-}
-
-#checkEM2 {
-    top: 47.6%;
-    left: 37.9%;
-
-}
-
-#checkEM3 {
-    top: 62.1%;
-    left: 37.9%;
 
 }
 
@@ -643,7 +607,7 @@
 
 }
 
-#checkEM5 {
+#check3 {
     top: 58%;
     left: 24.8%;
 
