--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ input {
     width: 70px;
     height: 70px;
     z-index: 2;
-    left: 47em;
-    top: 22em;
+    left: 50.7%;
+    top: 42.5%;
     transition-property: top;
     transition-duration: 4s;
     transition-timing-function: linear;
