--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ input {
     z-index: 2;
     left: 47em;
     top: 22em;
-    transition-property: top;
+    transition-property: all;
     transition-duration: 4s;
     transition-timing-function: linear;
 }
