--- a/css/style3.css
+++ b/css/style3.css
@@ -95,14 +95,14 @@
 #bann2{
     top: 50px;
     left: 735px;
-    background-image: url("../image/banniere médiatheque.png");
+    background-image: url("../image/banniere mediatheque.png");
 
 }
 
 #bann3{
     top: -300px;
     left: 155px;
-    background-image: url("../image/banniere Eco-musée.png");
+    background-image: url("../image/banniere Eco-musee.png");
 
 }
 
