--- a/css/css2.css
+++ b/css/css2.css
@@ -231,7 +231,7 @@
 
 
 
-/* anim mairie */
+/* anim mairie
 @keyframes movepersoM {
     0% {
     left: 50.7%;
@@ -242,7 +242,7 @@
     left: 50.7%;
     top: 37.5%;
     }
-}
+}*/
 
 
 /*anim L@BO
