--- a/css/css2.css
+++ b/css/css2.css
@@ -621,46 +621,221 @@ top: 86%;
     }
 }
 
-/*
-#perso{
+    /*anim Maison de l'europe to Labo*/
+
+    .MDEToL {
+        animation-duration: 10s;
+        animation-name: movepersoMDEtoL;
+        animation-fill-mode: both;
+    }
+
+/*anim Maison de l'europe to Mediatheque*/
+
+.MDEToME {
     animation-duration: 10s;
-    animation-name: movepersoMDEtoL;
+    animation-name: movepersoMDEtoME;
     animation-fill-mode: both;
 }
 
+/*anim Maison de l'europe to Ecomusee*/
 
+.MDEToEM {
+    animation-duration: 10s;
+    animation-name: movepersoMDEtoEM;
+    animation-fill-mode: both;
+}
+
+/*anim Maison de l'europe to Mairie*/
+
+.MDEToM {
+    animation-duration: 10s;
+    animation-name: movepersoMDEtoM;
+    animation-fill-mode: both;
+}
+
+/*anim Maison de l'europe to Mediatheque*/
 @keyframes movepersoMDEtoL {
+0% {
+left: 13.2%;
+top: 86%;
+}
+
+20% {
+left: 13.2%;
+top: 90%;
+}
+
+40% {
+left: 17.5%;
+top: 90%;
+}
+
+60% {
+left: 17.5%;
+top: 83.9%;
+}
+
+80% {
+left: 49.9%;
+top: 83.9%;
+}
+
+100% {
+left: 49.9%;
+top: 78%;
+}
+
+}
+
+/*anim Maison de l'europe to Mediatheque*/
+@keyframes movepersoMDEtoME {
+  0% {
+      left: 13.2%;
+      top: 86%;
+  }
+
+  15% {
+      left: 13.2%;
+      top: 90%;
+  }
+
+  30% {
+      left: 17.5%;
+      top: 90%;
+  }
+
+  45% {
+      left: 17.5%;
+      top: 83.9%;
+  }
+
+  60% {
+      left: 49.9%;
+      top: 83.9%;
+  }
+
+  75% {
+      left: 55%;
+      top: 93%;
+  }
+
+  90% {
+      left: 60.2%;
+      top: 93%;
+  }
+
+  100% {
+      left: 60.2%;
+      top: 90%;
+  }
+}
+
+/*anim Maison de l'europe to Ecomusee*/
+@keyframes movepersoMDEtoEM {
     0% {
         left: 13.2%;
         top: 86%;
     }
 
-    20% {
+    10% {
         left: 13.2%;
         top: 90%;
     }
 
-    40% {
+    20% {
         left: 17.5%;
         top: 90%;
     }
 
-    60% {
+    30% {
         left: 17.5%;
         top: 83.9%;
     }
 
-    80% {
-        left: 49.9%;
+    40% {
+        left: 45.5%;
         top: 83.9%;
     }
 
-    100% {
-        left: 49.9%;
-        top: 78%;
+    50% {
+        left: 45.5%;
+        top: 66.5%;
     }
 
+    60% {
+        left: 36.5%;
+        top: 66.5%;
+    }
+
+    70% {
+        left: 36.5%;
+        top: 57.3%;
+    }
+
+    80% {
+        left: 23.5%;
+        top: 57.3%;
+    }
+
+    100% {
+        left: 23.5%;
+        top: 53.2%;
+    }
 }
+
+/*anim Maison de l'europe to Mairie*/
+@keyframes movepersoMDEtoM {
+    0% {
+        left: 13.2%;
+        top: 86%;
+    }
+
+    10% {
+        left: 13.2%;
+        top: 90%;
+    }
+
+    20% {
+        left: 17.5%;
+        top: 90%;
+    }
+
+    30% {
+        left: 17.5%;
+        top: 83.9%;
+    }
+
+    40% {
+        left: 45.5%;
+        top: 83.9%;
+    }
+
+    50% {
+        left: 45.5%;
+        top: 66.5%;
+    }
+
+    60% {
+        left: 36.5%;
+        top: 66.5%;
+    }
+
+    70% {
+        left: 36.5%;
+        top: 43.5%;
+    }
+
+    80% {
+        left: 50.6%;
+        top: 43.5%;
+    }
+
+    100% {
+        left: 50.6%;
+        top: 38%;
+    }
+}
+
 
 
 
